@@ -1,6 +1,6 @@
 // $Id$
 // 
-// Ported from JTS junit/algorithm/RobustLineIntersectionTest.java rev. 1.3
+// Ported from JTS junit/algorithm/RobustLineIntersectionTest.java r785
 
 #include <tut.hpp>
 // geos
@@ -44,7 +44,7 @@ namespace tut
 	                   double distanceTolerance)
         {
                 bool isEqual = equals(p, q, distanceTolerance);
-		ensure("testIntPoints", isEqual);
+		ensure("testIntPoints: expected: " + p.toString() + " obtained " + q.toString(), isEqual);
         }
 
 	/**
@@ -176,6 +176,32 @@ namespace tut
 		                    intPt, distanceTolerance);
         }
 
+	void computeIntersectionNone(const std::string& wkt1,
+	                         const std::string& wkt2)
+                // throws ParseException
+        {
+		GeomPtr g1(reader.read(wkt1));
+		GeomPtr g2(reader.read(wkt2));
+
+		LineString* l1ptr = dynamic_cast<LineString*>(g1.get());
+		LineString* l2ptr = dynamic_cast<LineString*>(g2.get());
+
+		ensure(0 != l1ptr);
+		ensure(0 != l2ptr);
+
+		LineString& l1 = *l1ptr;
+		LineString& l2 = *l2ptr;
+
+	        std::vector<Coordinate> pt;
+		pt.push_back(l1.getCoordinateN(0));
+		pt.push_back(l1.getCoordinateN(1));
+		pt.push_back(l2.getCoordinateN(0));
+		pt.push_back(l2.getCoordinateN(1));
+
+	  std::vector<Coordinate> intPt;
+		computeIntersection(pt, 0, intPt, 0);
+        }
+
 	test_robustlineintersection_data()
 		:
 		pm(),
@@ -286,6 +312,98 @@ namespace tut
 	   computeIntersection( pt, 1, intPt, 0);
 	}
 #endif // fails
+
+  /**
+   * Test involving two non-almost-parallel lines.
+   * Does not seem to cause problems with basic line intersection algorithm.
+   *
+   */
+	//     (testLeduc_1)
+	template<>
+	template<>
+	void object::test<6>()
+	{         
+    computeIntersection(
+        "LINESTRING (305690.0434123494 254176.46578338774, 305601.9999843455 254243.19999846347)",
+        "LINESTRING (305689.6153764265 254177.33102743194, 305692.4999844298 254171.4999983967)",
+        1,
+        "POINT (305690.0434123494 254176.46578338774)",
+        0);
+	}
+
+#if 0 // fails: finds an intersection (we don't have DD)
+  /**
+   * Test from Tomas Fa - JTS list 6/13/2012
+   *
+   * Fails using original JTS DeVillers determine orientation test.
+   * Succeeds using DD and Shewchuk orientation
+   *
+   */
+  // testTomasFa_2
+	template<>
+	template<>
+	void object::test<7>()
+	{         
+    computeIntersectionNone(
+        "LINESTRING (-5.9 163.1, 76.1 250.7)",
+        "LINESTRING (14.6 185.0, 96.6 272.6)");
+	}
+#endif // fails
+
+#if 0 // fails: finds an intersection (we don't have DD)
+  /**
+   * Test from Tomas Fa - JTS list 6/13/2012
+   *
+   * Fails using original JTS DeVillers determine orientation test.
+   * Succeeds using DD and Shewchuk orientation
+   *
+   */
+  // testTomasFa_1
+	template<>
+	template<>
+	void object::test<8>()
+	{         
+    computeIntersectionNone(
+        "LINESTRING (-42.0 163.2, 21.2 265.2)",
+        "LINESTRING (-26.2 188.7, 37.0 290.7)");
+	}
+#endif // fails
+
+  /**
+   * Following cases were failures when using the CentralEndpointIntersector heuristic.
+   * This is because one segment lies at a significant angle to the other,
+   * with only one endpoint is close to the other segment.
+   * The CE heuristic chose the wrong endpoint to return.
+   * The fix is to use a new heuristic which out of the 4 endpoints
+   * chooses the one which is closest to the other segment.
+   * This works in all known failure cases.
+   *
+   */
+  // public void testCentralEndpointHeuristicFailure()
+  template<>
+	template<>
+	void object::test<9>()
+  {
+    computeIntersection(
+        "LINESTRING (163.81867067 -211.31840378, 165.9174252 -214.1665075)",
+        "LINESTRING (2.84139601 -57.95412726, 469.59990601 -502.63851732)",
+        1,
+        "POINT (163.81867067 -211.31840378)",
+        0);
+  }
+
+  // public void testCentralEndpointHeuristicFailure2()
+  template<>
+	template<>
+	void object::test<10>()
+  {
+    computeIntersection(
+        "LINESTRING (-58.00593335955 -1.43739086465, -513.86101637525 -457.29247388035)",
+        "LINESTRING (-215.22279674875 -158.65425425385, -218.1208801283 -160.68343590235)",
+        1,
+        "POINT ( -215.22279674875 -158.65425425385 )",
+        0);
+  }
 
 
 
